fixed flickering carousel slider

--- a/css/responsive_1.css
+++ b/css/responsive_1.css
@@ -19,6 +19,10 @@
     height: 30px;
   }
 
+  /* .navbar-toggler {
+    right: 15px;
+  } */
+
   /*Carousel Section*/
 
   #carousel .heading {
