--- a/css/style_1.css
+++ b/css/style_1.css
@@ -72,8 +72,6 @@ a.nav-link:hover {
   z-index: 100;
 }
 
-/*Hamburger menu - X transition*/
-
 .navbar-toggler {
   border: 0;
   position: relative;
@@ -83,7 +81,6 @@ a.nav-link:hover {
   border-top: 2px solid var(--lighterGrey);
   border-bottom: 2px solid var(--lighterGrey);
   border-radius: 0;
-  right: 10px;
 }
 
 .navbar-toggler:before,
@@ -92,7 +89,6 @@ a.nav-link:hover {
   display: block;
   width: 100%;
   height: 2px;
-
   position: absolute;
   top: 50%;
   left: 50%;
@@ -106,7 +102,7 @@ a.nav-link:hover {
   --bs-navbar-toggler-focus-width: 0;
 }
 
-button.navbar-toggler:hover {
+button:hover {
   color: var(--lighterGrey);
 }
 
@@ -119,13 +115,6 @@ button.is-active:before {
 }
 button.is-active:after {
   transform: translate(-50%, -50%) rotate(-45deg);
-}
-
-body {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  min-height: 100vh;
 }
 
 .navbar-toggler-icon {
